create modal-common, search filter
